# NIS1366_2024

./: CMakeLists.txt  README.md  install_project.sh  test_script.sh
data/: lcy.txt  user.txt  zhangsan.txt
include/: head.h
src/: CMakeLists.txt  My_time.cpp  head.cpp  main.cpp  task.cpp  user.cpp
